# es-cqrs-sandbox

./: pyproject.toml
src/es_cqrs_sandbox/: __init__.py
src/es_cqrs_sandbox/command/domain/common/: entity.py  event.py  test_types.py  types.py
src/es_cqrs_sandbox/command/domain/group/: __init__.py  ids.py
src/es_cqrs_sandbox/command/domain/user/: __init__.py  errors.py  events.py  ids.py  interface_repository.py  user.py
