[project]
name = "es-cqrs-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.13.0",
    "returns>=0.23.0",
    "uuid6>=2024.7.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.29.0",
    "ruff>=0.7.3",
]

[tool.ruff.lint]
ignore = ["F401", "E741"]
