[project]
name = "es-cqrs-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "returns[compatible-mypy]>=0.26.0",
    "uuid6==2025.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "mypy>=1.17.1",
    "ruff==0.12.9",
]

[tool.ruff.lint]
ignore = ["F401", "E741"]

[tool.mypy]
plugins = ["returns.contrib.mypy.returns_plugin"]
